# Photo-Vdeo-sharing-BE

./: .gitignore  chapter1.md  chapter2.md  chapter3.md  main.py  pyproject.toml
app/: __init__.py  app.py
app/core/: __init__.py  config.py
app/db/: db.py  db_model.py
app/routers/: __init__.py  files.py
app/schemas/: file.py  post.py
